--- a/client/package.json
+++ b/client/package.json
@@ -9,8 +9,11 @@
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.8.1",
+    "axios": "^0.21.1",
+    "file-saver": "^2.0.5",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-loadingg": "^1.7.2",
     "react-scripts": "4.0.3"
   },
   "scripts": {
