--- a/public/manifest.json
+++ b/public/manifest.json
@@ -3,19 +3,14 @@
   "name": "Hashdefine Online IDE",
   "icons": [
     {
-      "src": "favicon.ico",
+      "src": "52865452.ico",
       "sizes": "64x64 32x32 24x24 16x16",
       "type": "image/x-icon"
     },
     {
-      "src": "logo192.png",
+      "src": "52865452.png",
       "type": "image/png",
-      "sizes": "192x192"
-    },
-    {
-      "src": "logo512.png",
-      "type": "image/png",
-      "sizes": "512x512"
+      "sizes": "200x200"
     }
   ],
   "start_url": ".",
