--- a/backend/package.json
+++ b/backend/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "bcrypt": "^5.0.1",
     "bcryptjs": "^2.4.3",
+    "dotenv": "^16.0.0",
+    "env-cmd": "^10.1.0",
     "express": "^4.17.3",
     "mongoose": "^6.1.4",
     "validator": "^13.7.0"
