--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-dom": "^17.0.2",
     "react-monaco-editor": "^0.46.0",
     "react-redux": "^7.2.6",
+    "react-router-dom": "^6.2.2",
     "react-scripts": "^3.4.4",
     "redux": "^4.1.2",
     "sass": "^1.49.0",
