--- a/package.json
+++ b/package.json
@@ -12,13 +12,18 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.24.0",
+    "bootstrap": "^5.1.3",
     "react": "^17.0.2",
+    "react-color": "^2.19.3",
+    "react-color-palette": "^6.2.0",
     "react-dom": "^17.0.2",
     "react-monaco-editor": "^0.46.0",
     "react-redux": "^7.2.6",
     "react-router-dom": "^6.2.2",
     "react-scripts": "^3.4.4",
+    "reactcss": "^1.2.3",
     "redux": "^4.1.2",
+    "roughjs": "^4.5.2",
     "sass": "^1.49.0",
     "web-vitals": "^1.1.2"
   },
